Fixed mobile footer Fixed areas covered Fixed mobile navbar breakpointing Fixed icon responsiveness Checked grammar * Sophie

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -119,6 +119,11 @@ p {
 		display: none !important;
 	}
 }
+.hide-on-tablet {
+	@include for_breakpoint(tablet) {
+		display: none !important;
+	}
+}
 .hide-on-desktop {
 	@include for_breakpoint(desktop) {
 		display: none !important;
@@ -154,6 +159,10 @@ p {
 .line {
 	width: 75%;
 	border: solid white 2px;
+}
+.contact-icon {
+	font-size: 1.6rem;
+	margin: 1em 0 0.3em 0;
 }
 .navbar {
 	width: 100%;
@@ -296,6 +305,7 @@ p {
 	padding: 1.5em;
 	margin: 1.5em;
 	border-radius: 40px;
+	align-items: center;
 	> i {
 		font-size: 3rem;
 		margin-right: 20px;
@@ -344,8 +354,16 @@ p {
 	> p {
 		margin: 2em;
 	}
-	> .content-side-by-side h2 {
+	> h3 {
+		margin: 2em;
+	}
+	> .content-side-by-side h3 {
 		margin: 1em 0 !important;
+		@include for_breakpoint(mobile) {
+			font-size: 1.2rem !important;
+			font-weight: 400;
+			text-align: left !important;
+		}
 	}
 	@include for_breakpoint(mobile) {
 		> p {
@@ -365,7 +383,10 @@ p {
 .icons {
 	width: 100%;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+	align-items: center;
+	gap: 40px;
+	flex-wrap: wrap;
 	margin: 1em 0;
 	@include for_breakpoint(mobile) {
 		margin-top: 40px !important;
@@ -413,9 +434,14 @@ p {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 	flex: 1;
 	> p {
 		min-height: 120px;
+	}
+	/* Icon margin offset for contact us page */
+	> i:first-child {
+		margin-top: 0 !important;
 	}
 }
 .img-hover-wrapper {
@@ -634,5 +660,68 @@ p {
 		background-color: white;
 		transform: translateY(-50%) scaleY(5);
 		transition: $transition-duration;
+	}
+}
+.footer {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	@include for_breakpoint(mobile) {
+		flex-direction: column !important;
+	}
+}
+.footer-logo {
+	width: 50%;
+	display: flex;
+	justify-content: center;
+	> img {
+		height: 100px;
+	}
+	@include for_breakpoint(mobile) {
+		width: 100% !important;
+	}
+}
+.footer-contact {
+	width: 50%;
+	> .footer-contact-block {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		margin: 0.5em 0;
+		> i {
+			font-size: 1.1rem;
+			margin-right: 0.5em;
+		}
+		> i.large {
+			font-size: 2rem;
+			margin-right: 0.5em;
+		}
+		> p {
+			margin: 0;
+		}
+		> p.large {
+			font-size: 2rem !important;
+			margin: 0;
+		}
+	}
+	@include for_breakpoint(mobile) {
+		width: 100% !important;
+		margin-top: 1em;
+		> .footer-contact-block {
+			padding: 0 2em;
+			> i {
+				font-size: 1rem !important;
+			}
+			> i.large {
+				font-size: 1.5rem !important;
+			}
+			> p {
+				font-size: 1rem !important;
+			}
+			> p.large {
+				font-size: 1.5rem !important;
+			}
+		}
 	}
 }
